manifests/base/webhook/sarena-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: addresspool.sarena.erwinkok.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ1ekNDQVdHZ0F3SUJBZ0lVY3h5MHphQWgyQlNOam9OSU1kNTlpUXg1QnJvd0NnWUlLb1pJemowRUF3SXcKSVRFZk1CMEdBMVVFQXd3V2NtTm5aVzRnYzJWc1ppQnphV2R1WldRZ1kyVnlkREFnRncwM05UQXhNREV3TURBdwpNREJhR0E4ME1EazJNREV3TVRBd01EQXdNRm93SVRFZk1CMEdBMVVFQXd3V2NtTm5aVzRnYzJWc1ppQnphV2R1ClpXUWdZMlZ5ZERCWk1CTUdCeXFHU000OUFnRUdDQ3FHU000OUF3RUhBMElBQk9ScTZ6UEx0THZZUnRQQ0cyNlQKSzFqbXJHNDBsT1VMa1g2bmVJMFV4M2xHUTk4UjBrL2JKZkc4SGlXRGcxbm9nUHRtamRrcVVzR1FFdkNoRTRtMQpxcGVqZFRCek1IRU [...]
    service:
      name: sarena-kubernetes-webhook
      namespace: sarena-system
      path: /validate/addresspool
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: addresspool.sarena.erwinkok.org
  rules:
  - apiGroups:
    - sarena.erwinkok.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - addresspools
    scope: Cluster
  sideEffects: None
  timeoutSeconds: 5
